--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,29 +3,9 @@
 @tailwind components;
 @tailwind utilities;
 
-/* html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+/* Viết như này để khi mà classname quá dài và có  thể tái sử dụng lại được */
+@layer components {
+  .label {
+    @apply mt-2 rounded-xl bg-sky-600 px-2 font-semibold text-zinc-800;
   }
-  body {
-    color: white;
-    background: black;
-  }
-} */
+}
