--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap');
+@import 'github-syntax-dark/lib/github-dark.css';
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -10,5 +11,8 @@
   }
   .selected-label {
     @apply mt-2 rounded-xl bg-sky-800 px-2 font-semibold text-neutral-300;
+  }
+  .layout {
+    @apply flex h-screen w-screen flex-col items-center overflow-auto bg-zinc-800 font-poppins text-neutral-300;
   }
 }
